@@ -15,11 +15,14 @@ public class ClassCreationProxyGenerator implements ProxyGenerator {
         String className = "C" + id;
         String targetClass = (String) data; // e.g. "java.util.ArrayList"
 
-        // TODO: Generate a class named `C[id]` with a single static method
-        // that uses reflection (e.g. Class.forName(targetClass).newInstance())
-        // to return a new instance of the class.
+        StringBuilder sb = new StringBuilder();
+        sb.append("public class ").append(className).append(" {\n");
+        sb.append("    public static Object create() throws Exception {\n");
+        sb.append("        return Class.forName(\"").append(targetClass).append("\").getDeclaredConstructor().newInstance();\n");
+        sb.append("    }\n");
+        sb.append("}\n");
 
         System.out.println("Generating Class Creation Proxy: " + className + " for class: " + targetClass);
-        return null;
+        return sb.toString();
     }
 }
